--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Blog</title>
+      <title>Portfolio</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -63,7 +63,7 @@
       </div>
       <!-- header section end -->
       <!-- blog section start -->
-      div class="blog_section layout_padding">
+      <div class="blog_section layout_padding">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
